--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 distro==1.7.0
-distro-info==1.1+ubuntu0.1
+distro-info==1.1+ubuntu0.2
 dm-tree==0.1.8
 entrypoints==0.4
 etils==1.6.0
@@ -53,6 +53,7 @@ h5py==3.10.0
 html5lib==1.1
 httplib2==0.22.0
 idna==3.6
+imageio==2.34.0
 immutabledict==4.1.0
 importlib-metadata==4.6.4
 importlib-resources==6.1.1
@@ -141,11 +142,13 @@ PyQt6==6.6.1
 PyQt6-Qt6==6.6.1
 PyQt6-sip==13.6.0
 pyrsistent==0.18.1
-python-apt==2.4.0+ubuntu2
+pyserial==3.5
+python-apt==2.4.0+ubuntu3
 python-dateutil==2.8.2
 python-slugify==8.0.1
 pythran==0.10.0
 pytz==2023.3.post1
+pyusb==1.2.1.post1
 PyYAML==6.0.1
 pyzmq==25.1.2
 regex==2023.12.25
@@ -191,7 +194,7 @@ tqdm==4.66.1
 traitlets==5.14.1
 typing_extensions==4.9.0
 tzdata==2023.4
-ubuntu-advantage-tools==8001
+ubuntu-pro-client==8001
 ufoLib2==0.13.1
 ufw==0.36.1
 unattended-upgrades==0.1
@@ -201,6 +204,7 @@ urllib3==2.1.0
 wadllib==1.3.6
 wcwidth==0.2.13
 webencodings==0.5.1
+websockets==9.1
 Werkzeug==3.0.1
 wget==3.2
 widgetsnbextension==2.0.0
